replace free-node with kill to prevent destroying synth groups